--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^9.4.0",
+    "@vueuse/core": "^9.5.0",
     "bulma": "^0.9.4",
+    "firebase": "^9.14.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
